<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cube Shop</string>

    <!-- Navigation -->
    <string name="title_categories">Categories</string>
    <string name="title_products">Products</string>
    <string name="title_cart">Cart</string>
    <string name="title_account">Account</string>
    <string name="title_orders">Orders</string>
    <string name="title_map">Map</string>

    <!-- Auth -->
    <string name="auth_admin">Admin</string>
    <string name="auth_user_id">User ID</string>
    <string name="auth_name">Name</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="auth_sign_in">Sign In</string>
    <string name="auth_sign_up">Sign Up</string>
    <string name="auth_sign_out">Sign Out</string>
    <string name="auth_sign_in_success">Sign In Success</string>
    <string name="auth_sign_in_fail">Sign In Fail</string>
    <string name="auth_sign_up_success">Sign Up Success</string>
    <string name="auth_sign_up_fail">Sign Up Fail</string>
    <string name="auth_sign_in_with_github">Sign In with GitHub</string>

    <!-- Create new product -->
    <string name="new_product_name">Name</string>
    <string name="new_product_category">Category</string>
    <string name="new_product_price">Price (in cents)</string>
    <string name="new_product_in_stock">In stock</string>
    <string name="new_product_description">Description</string>
    <string name="new_product_create">CREATE NEW PRODUCT</string>

    <!-- Buy -->
    <string name="buy_button">BUY</string>
    <string name="buy_success">Go to payments to pay for your order</string>
    <string name="buy_fail">Something went wrong</string>

    <!-- Pay -->
    <string name="pay_button">PAY</string>
    <string name="pay_stripe">Pay with Stripe</string>
    <string name="pay_payu">Pay with PayU</string>
    <string name="pay_success">Payment successful</string>
    <string name="pay_fail">Something went wrong</string>

    <!-- Orders -->
    <string name="orders_order_id">Order ID</string>
    <string name="orders_date">Date</string>
    <string name="orders_price">Price</string>
    <string name="orders_status">Status</string>

    <!-- Notifications -->
    <string name="notification_contact_us">Contact us</string>
</resources>
