<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_category_24dp"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/ic_storefront_24dp"
        android:title="@string/title_products" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_shopping_cart_24dp"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_person_24dp"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_payments_24dp"
        android:title="@string/title_orders" />

</menu>
